0.1.0 (2008-05-16)
==================

- Created package with ZopeSkel