@@ -25,7 +25,5 @@ BIBTEX_TEST_TYPEFIELD = join(PACKAGE_HOME, 'samples',
                                  'bibtex_test_typefield.bib')
 BIBTEX_TEST_CITE_KEY = join(PACKAGE_HOME, 'samples',
                             'bibtex_test_cite_key.bib')
-CITATION_MANAGER_SOURCE = join(PACKAGE_HOME, 'samples', 
-                               'citationmanager_test.txt')
 RIS_SOURCE = join(PACKAGE_HOME, 'samples', 'ris_test.ris')
 ENDNOTE_TEST_SOURCE = join(PACKAGE_HOME, 'samples', 'endnote.end')
