@@ -2,3 +2,4 @@
 ==================
 
 - Created package with ZopeSkel
+- Removed obsolete/unused parser: CitationManager
